# MW-CE

./: CODE_OF_CONDUCT.md  ERRORS_LIST.txt  File_decrypter.py  LICENSE  MW-CE.py  README.md  Requirements.txt  index.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
Info/: CODE_OF_CONDUCT.md  ERRORS.txt
