[tool.poetry]
name = "repl_python3_MW-CE"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
cryptography = "^36.0.1"
scapy = "^2.4.5"
tqdm = "^4.62.3"
python-whois = "^0.7.3"
Faker = "^12.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
