[tool.poetry]
name = "repl_python3_MW-CE"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
cryptography = "^36.0.1"
scapy = "^2.4.5"
tqdm = "^4.62.3"
python-whois = "^0.7.3"
Faker = "^12.0.0"
GitPython = "^3.1.27"
requests = "^2.27.1"
youtube_dl = "^2021.12.17"
pytube = "^12.0.0"
pytube3 = "^9.6.4"
art = "^5.6"
climage = "^0.1.3"
pyshorteners = "^1.0.1"
whois = "^0.9.22"
alive-progress = "^3.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
